# electon-voting-system

./: Dockerfile  LICENSE  Makefile  README.md  dev.sh  docker-compose.yml  manage.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  constants.py  forms.py  middleware.py  models.py  urls.py
apps/api/: apps.py  permissions.py  serializers.py  throttling.py  urls.py  views.py
apps/audit/: __init__.py  admin.py  decorators.py  middleware.py  models.py
apps/blockchain/: admin.py  models.py  tasks.py  urls.py  views.py
apps/candidates/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/elections/: __init__.py  admin.py  apps.py  event_emitter.py  forms.py  mixins.py  models.py  sse.py  urls.py  views.py
apps/notifications/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
apps/results/: apps.py  urls.py  views.py
apps/subscriptions/: admin.py  models.py  services.py  tests.py
apps/voting/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
electon/: __init__.py  asgi.py  celery.py  urls.py  utils.py  views.py  wsgi.py
electon/settings/: __init__.py  base.py  development.py  production.py  testing.py
nginx/: nginx.conf
solana-program/: Anchor.toml
solana-program/programs/electon_voting/: Cargo.toml
solana-program/programs/electon_voting/src/: lib.rs
static/css/: base.css
static/favicons/: site.webmanifest
static/js/: base.js
templates/: base.html
templates/accounts/: admin_home.html  create_election.html  (+1 more)
(+151 files in other folders)
