[package]
name = "electon_voting"
version = "0.1.0"
description = "ElectON on-chain election program (Anchor / Solana)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "electon_voting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
sha2 = "0.10"
